<resources>
    <string name="app_name">SnackPlus</string>
    <string name="snack_">Snack+</string>
    <string name="customer_">Customer</string>
    <string name="driver_">Driver</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="customer_sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="tel">Tel</string>
    <string name="input_your_address">Input Your Address</string>
    <string name="order">Order</string>
    <string name="x2">x2</string>
    <string name="item_name">Item Name</string>
    <string name="dolllor_price_2">$2.0</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
