<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:id="@+id/txt_signup_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:text="@string/customer_sign_up"
            android:textColor="@color/colorBlue"
            android:textSize="40sp"
    />
    <EditText
            android:id="@+id/txt_signup_name"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_signup_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:hint="@string/name"

    />
    <EditText
            android:id="@+id/txt_signup_address"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_signup_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
    />
    <EditText
            android:id="@+id/txt_signup_tel"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_signup_address"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/tel"
    />
    <EditText
            android:id="@+id/txt_signup_email"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_signup_tel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
    />
    <EditText
            android:id="@+id/txt_signup_password"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_signup_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
    />
    <Button android:layout_width="275dp"
            android:layout_height="44dp"
            android:background="@drawable/btn_rounded"
            android:id="@+id/btn_signup_signup"
            android:layout_below="@+id/txt_signup_password"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textAllCaps="false"/>
</RelativeLayout>