<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E5E5E5">
    <TextView
            android:id="@+id/snack_logo"
            android:layout_width="249dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="81dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="214dp"
            android:text="@string/snack_"
            android:gravity="center_horizontal"
            android:textAppearance="@style/snack_"
    />
    <Button android:layout_width="275dp"
            android:layout_height="44dp"
            android:id="@+id/btn_customer_sign_up"
            android:layout_below="@+id/snack_logo"
            android:layout_marginTop="124dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_rounded"
            android:text="@string/customer_"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textAllCaps="false"/>
    <Button android:layout_width="275dp"
            android:layout_height="44dp"
            android:id="@+id/btn_driver_sign_up"
            android:layout_below="@+id/btn_customer_sign_up"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_rounded"
            android:text="@string/driver_"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textAllCaps="false"/>
</RelativeLayout>